1.2.14: 
	- enable alt+Tab in LITE

1.2.13: 2003-09-27
	- build fixes
	- only handle KDE tray protocol when icewmtray running

1.2.13pre3: 2003-09-14
	- ShowDesktop button added (someone make a nice icon, please)
	- fix defunct icewmbg processes on theme selection
	- fix setting themes with a SPACE in the name
        - KDE system tray support (experimental)
	- support for scaled backgrounds (experimental)
        - fix crash on option parsing in icesound
	- remove "xftdummy" foundry from default fonts (Pavel Roskin)
	- add reboot/shutdown to logout menu (Hanspeter Roth)
	- sort theme menu by name

1.2.13pre2: 2003-09-05
	- fix icewmbg not setting the background when started before icewm

1.2.13pre1: 2003-08-31
	- fix ~/.icewm/theme file permissions
	- fix drawing of checkboxes in menus
	- fix display corruption in network status
	- fix memory leak in icewmbg on workspace switches
	- fix menu behavior with xinerama
	- Italian translation updated
	- new preference "DoubleBuffer" (default: 1)
	- experimental: icewm-session (runs icewmbg. icewmtray, icewm
          and restarts icewm on crash)

1.2.12: 2003-08-24
        - MAJOR CHANGE: reverted preferences/theme order to same 
          as before 1.2.10. Added "prefoverride" file for overriding
          theme preferences.
	- icewmbg is only re/started when already running
	- fix build with --disable-taskbar
	- fix build with --disable-shape
        - fix ShowMoveSizeStatus with OpaqueMove/Resize

1.2.11: 2003-08-19
	- added forcedClose window option (Hanspeter Roth)
	- added recent average in network monitor
        - fix icewmbg not setting theme background
	- fix spelling of _NET_WORKAREA hint (Jeff Pohlmeyer (tgeek))
        - fix spelling of --client-id option name (YAMAMOTO, Taku <taku@cent.saitama-u.ac.jp>)
	- fix random restart failures
	- fix codeset handling on FreeBSD
	- Czech translation update (Jan Horak)
	- Bulgarian translation (Pavel Pyuter)
	- fix painting of exposed icons

1.2.10: 2003-08-11