@@ -357,6 +357,13 @@ AC_ARG_ENABLE(antialiasing,
     fi
   fi
 
+AC_ARG_ENABLE(xrandr,
+[ --disable-xrandr         Disable XRANDR extension support])
+  if test "$enable_xrandr" != "no"; then
+    AC_DEFINE(CONFIG_XRANDR, 1, [Define to enable XRANDR extension])
+    CORE_LIBS="$LIBS -lXrandr -lXrender"
+  fi
+
 AC_ARG_ENABLE(corefonts,
 [  --enable-corefonts   Support X11 core fonts])
 
